Revert "Just minor fix"
This reverts commit 55b54d6b991b7929aaa712dd348d34a7e2c7d8ae.

--- a/..README.md
+++ b/..README.md
@@ -24,6 +24,6 @@ This script will allow you to improve your daily tasks by assigning custom key m
 ## Issues fixes
 This is just a number, I don't have the exact number of issues experienced during the creation of this script LOL, so keeping it as simple as possible here.. 
 
-### \#020 CreateOpenFolder() function fails to find network mapped drives
+### 020 CreateOpenFolder() function fails to find network mapped drives
 Issue occurs because user that creates the folder is not admin user (Try entering that same path via CMD as admin and you'll see sae error) 
 Adding  toggle to run script as admin so if you do not need VPN functions, you're able to open network mapped locations
