--- a/..README.md
+++ b/..README.md
@@ -27,3 +27,6 @@ This is just a number, I don't have the exact number of issues experienced durin
 ### \#020 CreateOpenFolder() function fails to find network mapped drives
 Issue occurs because user that creates the folder is not admin user (Try entering that same path via CMD as admin and you'll see sae error) 
 Adding  toggle to run script as admin so if you do not need VPN functions, you're able to open network mapped locations
+
+### \#021 Minor glitch with CreateOpenFolder()
+Folders were not being opened if folder slot had if *Open_Create* as an option and folder existed previously
